--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -1,7 +1,10 @@
 @import "visually-hidden";
 @import "container";
 @import "header";
-@import "footer";
-
-
-
+@import "hero";
+@import "test";
+@import "middle";
+@import "easy";
+@import "articles";
+@import "price";
+@import "footer
